# NaviEU

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  analysis_options.yaml  github_ci.yml  pubspec.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docs/: ARCHITECTURE.md  BUILD.md  PRIVACY.md
docs/adr/: ADR-001-flutter-framework.md
lib/: main.dart
lib/core/: constants.dart
lib/domain/entities/: route.dart
lib/domain/repositories/: route_repository.dart
lib/ui/: app.dart
native/: CMakeLists.txt  build.sh
